--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import './utils/variable';
 @import './utils/fonts';
 @import './utils/hiden';
+@import './utils/mixins';
 // /////////////////////////
 @import './componets/container';
 @import './componets/logo';
