--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -8,7 +8,7 @@
         @content;
     }
 }
-@mixin decktop {
+@mixin desktop {
     @media  screen and (min-width: 1200px) {
         @content;
     }
