--- a/sass/componets/_container.scss
+++ b/sass/componets/_container.scss
@@ -1,5 +1,18 @@
 .container {
-    width: 1200px;
-    padding: 0 15px;
+    width: auto;
+    padding-left: 15px;
+    padding-right: 15px ;
     margin: 0 auto;
+    @include mobile {
+        width: 480px;
+    }
+
+    @include tablet {
+        width: 768px;
+    }
+
+    @include desktop {
+        width: 1200px;
+    }
 }
+
