--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,17 +1,34 @@
 .features {
-    padding: 94px 0;
+    padding: 60px 0;
+    @include desktop{
+        padding: 94px 0;
+
+    }
     &__list {
-        display: flex;
+        margin-bottom: -30px;  
+      
+        @include tablet{
+            display: flex;
+            flex-wrap: wrap;
+            margin-right: -30px;
+            }
     }
     &__item {
-        width: 270px;
+        width: auto;
+        margin-bottom: 30px;
+      
+        @include tablet{
+            margin-right: 30px;
+            flex-basis: calc(100% / 2 - 30px);
+        }
+        @include desktop{
+            margin-right: 30px;
+            flex-basis: calc(100% / 4 - 30px);
+        }
     }
-    &__item:not(:last-child) {
-        margin-right: 30px;
-    }
+   
 
     &__icon {
-        width: 270px;
         height: 120px;
         border-radius: 5px;
         background-color: #F5F4FA;
