--- a/css/main.css
+++ b/css/main.css
@@ -559,7 +559,14 @@ header .container {
 }
 
 .about {
+  display: none;
   padding-bottom: 94px;
+}
+
+@media screen and (min-width: 1200px) {
+  .about {
+    display: block;
+  }
 }
 
 .about__list {
