--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,6 +1,7 @@
 .team {
-    padding-bottom: 94px;
-    padding-top: 94px;
+    // padding: 94px 0;
+    padding: 60px 0;
+    
     background-color: #F5F4FA;
     &__title {
         font-size: 36px;
@@ -11,19 +12,37 @@
         margin-bottom: 50px;
     }
     &__list {
-        display: flex;
+        // display: flex;
+        margin-bottom: -30px;
+        @include tablet{
+            display: flex;
+            flex-wrap: wrap;
+            margin-right: -30px;
+        }
     }
     &__item {
-        width: 270px;
+        // width: 270px;
+        margin-bottom: 30px;
+        // margin-right: 30px;
         background-color: #ffffff;
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
             0px 1px 1px rgba(0, 0, 0, 0.14),
             0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
+        @include tablet{
+            margin-right: 30px;
+            flex-basis: calc(100% / 2 - 30px);
+        }
+        @include desktop{
+            margin-right: 30px;
+            flex-basis: calc(100% / 4 - 30px);
+        }
     }
-    &__item:not(:last-child) {
-        margin-right: 30px;
+    &__about {
+        padding-top: 30px;
+        padding-bottom: 30px;
     }
+
     &__name {
         font-weight: 500;
         font-size: 16px;
@@ -42,10 +61,7 @@
         letter-spacing: 0.03em;
         margin-bottom: 16px;
     }
-    &__about {
-        padding-top: 30px;
-        padding-bottom: 30px;
-    }
+   
     &__soc-list {
         display: flex;
         justify-content: center;
