--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,22 +1,43 @@
 .clients {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    @include desktop{
+        padding: 94px 0;
+    }
     &__title {
-        font-size: 36px;
-        line-height: 1.16;
+        font-size: 33px;
+        line-height: 1.18;
         letter-spacing: 0.03em;
         color: var(--second-fonts-color);
         text-align: center;
-        margin-bottom: 50px;
+        margin-bottom: 30px;
+        @include desktop{
+            margin-bottom: 50px;
+            font-size: 36px;
+            line-height: 1.16;
+        }
     }
+
+
     &__list {
         display: flex;
+        flex-wrap: wrap;
+        margin-right: -30px;
+        margin-bottom: -30px;
     }
-    &__item+&__item {
-        margin-left: 30px;
+    &__item {
+        margin-right: 30px;
+        margin-bottom: 30px;
+        flex-basis: calc(100% / 2 - 30px);
+        @include tablet{
+            flex-basis: calc(100% / 3 - 30px);
+        }
+        @include desktop{
+            flex-basis: calc(100% / 6 - 30px);
+        }
     }
     &__link {
-        width: 170px;
+        width: auto;
         height: 92px;
         border: 1px solid #AFB1B8;
         border-radius: 5px;
