--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,6 +1,9 @@
 .team {
-    // padding: 94px 0;
     padding: 60px 0;
+    @include desktop{
+        padding: 94px 0;
+    }
+
     
     background-color: #F5F4FA;
     &__title {
