--- a/css/main.css
+++ b/css/main.css
@@ -86,19 +86,16 @@ body {
   padding-right: 15px;
   margin: 0 auto;
 }
-
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
   }
 }
-
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
@@ -134,7 +131,7 @@ body {
   width: 528px;
   height: 581px;
   padding: 40px;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   border-radius: 5px;
   -webkit-transition: -webkit-transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -168,9 +165,7 @@ body {
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.close-modal:hover .close-modal-icon,
-.close-modal:focus .close-modal-icon {
+.close-modal:hover .close-modal-icon, .close-modal:focus .close-modal-icon {
   fill: var(--accent-color);
 }
 
@@ -190,7 +185,6 @@ body {
   color: #212121;
   margin-bottom: 12px;
 }
-
 .modal__label {
   position: relative;
   display: inline-block;
@@ -201,7 +195,6 @@ body {
   letter-spacing: 0.01em;
   color: #757575;
 }
-
 .modal__input {
   display: inline-block;
   width: 100%;
@@ -214,11 +207,9 @@ body {
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal__input:focus {
   border-color: var(--accent-color);
 }
-
 .modal__icon {
   position: absolute;
   bottom: 11px;
@@ -226,12 +217,10 @@ body {
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal__input:focus + .modal__icon {
   fill: var(--accent-color);
   outline: none;
 }
-
 .modal__area {
   width: 100%;
   height: 120px;
@@ -244,39 +233,39 @@ body {
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal__area::-webkit-input-placeholder {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
+.modal__area::-moz-placeholder {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
 .modal__area:-ms-input-placeholder {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .modal__area::-ms-input-placeholder {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .modal__area::placeholder {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .modal__area:focus {
   border-color: var(--accent-color);
 }
-
 .modal__checkbox {
   display: inline-block;
   position: relative;
@@ -288,11 +277,9 @@ body {
   letter-spacing: 0.03em;
   color: #757575;
 }
-
 .modal__agreement {
   width: 20px;
 }
-
 .modal__agreement-link {
   font-size: 14px;
   line-height: 1.71;
@@ -301,7 +288,6 @@ body {
           text-decoration-line: underline;
   color: #2196F3;
 }
-
 .modal__check-box {
   position: absolute;
   display: block;
@@ -316,19 +302,16 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
 }
-
 .modal__agreement:checked ~ .modal__check-box {
   background-image: url(../images/check-on.svg);
   background-size: contain;
   background-repeat: no-repeat;
   outline: none;
 }
-
 .modal__agreement:focus ~ .modal__check-box {
   outline: 2px solid var(--accent-color);
   border-radius: 3px;
 }
-
 .modal__submit {
   width: 200px;
   height: 50px;
@@ -362,11 +345,9 @@ header .container {
   display: flex;
   margin-left: 93px;
 }
-
 .nav__item:not(:last-child) {
   margin-right: 50px;
 }
-
 .nav__link {
   position: relative;
   color: var(--second-fonts-color);
@@ -379,7 +360,6 @@ header .container {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .nav__link:hover, .nav__link:focus {
   color: var(--accent-color);
 }
@@ -393,7 +373,6 @@ header .container {
   display: -ms-flexbox;
   display: flex;
 }
-
 .header-contacts__link {
   color: var(--first-fonts-color);
   font-weight: 500;
@@ -403,16 +382,13 @@ header .container {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .header-contacts__item:not(:first-child) {
   margin-left: 30px;
 }
-
 .header-contacts__item {
   padding-top: 32px;
   padding-bottom: 32px;
 }
-
 .header-contacts__link:hover, .header-contacts__link:focus {
   color: var(--accent-color);
 }
@@ -445,10 +421,9 @@ header .container {
   padding-bottom: 200px;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero.jpg);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
-  max-width: 1600px;
+  max-width: 1620px;
   margin: 0 auto;
 }
-
 .hero__title {
   color: var(--third-fonts-color);
   font-weight: 900;
@@ -461,7 +436,6 @@ header .container {
   margin: 0 auto;
   margin-bottom: 30px;
 }
-
 .hero__btn {
   color: var(--third-fonts-color);
   background-color: var(--accent-color);
@@ -482,17 +456,14 @@ header .container {
 .features {
   padding: 60px 0;
 }
-
 @media screen and (min-width: 1200px) {
   .features {
     padding: 94px 0;
   }
 }
-
 .features__list {
   margin-bottom: -30px;
 }
-
 @media screen and (min-width: 768px) {
   .features__list {
     display: -webkit-box;
@@ -503,28 +474,24 @@ header .container {
     margin-right: -30px;
   }
 }
-
 .features__item {
   width: auto;
   margin-bottom: 30px;
 }
-
 @media screen and (min-width: 768px) {
   .features__item {
     margin-right: 30px;
-    -ms-flex-preferred-size: calc(100% / 2 - 30px);
-        flex-basis: calc(100% / 2 - 30px);
+    -ms-flex-preferred-size: calc(50% - 30px);
+        flex-basis: calc(50% - 30px);
   }
 }
-
 @media screen and (min-width: 1200px) {
   .features__item {
     margin-right: 30px;
-    -ms-flex-preferred-size: calc(100% / 4 - 30px);
-        flex-basis: calc(100% / 4 - 30px);
+    -ms-flex-preferred-size: calc(25% - 30px);
+        flex-basis: calc(25% - 30px);
   }
 }
-
 .features__icon {
   height: 120px;
   border-radius: 5px;
@@ -540,7 +507,6 @@ header .container {
           justify-content: center;
   margin-bottom: 30px;
 }
-
 .features__title {
   font-weight: 700;
   font-size: 14px;
@@ -551,7 +517,6 @@ header .container {
   color: #212121;
   margin-bottom: 10px;
 }
-
 .features__text {
   font-weight: 400;
   font-size: 14px;
@@ -563,27 +528,22 @@ header .container {
   display: none;
   padding-bottom: 94px;
 }
-
 @media screen and (min-width: 1200px) {
   .about {
     display: block;
   }
 }
-
 .about__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
-
 .about__item {
   position: relative;
 }
-
 .about__item:not(:last-child) {
   margin-right: 30px;
 }
-
 .about__text {
   position: absolute;
   bottom: 0;
@@ -601,7 +561,6 @@ header .container {
   padding-bottom: auto;
   padding-top: 27px;
 }
-
 .about__title {
   font-size: 36px;
   line-height: 1.16;
@@ -616,13 +575,11 @@ header .container {
   padding: 60px 0;
   background-color: #F5F4FA;
 }
-
 @media screen and (min-width: 1200px) {
   .team {
     padding: 94px 0;
   }
 }
-
 .team__title {
   font-size: 36px;
   line-height: 1.16;
@@ -631,11 +588,9 @@ header .container {
   text-align: center;
   margin-bottom: 50px;
 }
-
 .team__list {
   margin-bottom: -30px;
 }
-
 @media screen and (min-width: 768px) {
   .team__list {
     display: -webkit-box;
@@ -646,7 +601,6 @@ header .container {
     margin-right: -30px;
   }
 }
-
 .team__item {
   margin-bottom: 30px;
   background-color: #ffffff;
@@ -654,28 +608,24 @@ header .container {
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-
 @media screen and (min-width: 768px) {
   .team__item {
     margin-right: 30px;
-    -ms-flex-preferred-size: calc(100% / 2 - 30px);
-        flex-basis: calc(100% / 2 - 30px);
+    -ms-flex-preferred-size: calc(50% - 30px);
+        flex-basis: calc(50% - 30px);
   }
 }
-
 @media screen and (min-width: 1200px) {
   .team__item {
     margin-right: 30px;
-    -ms-flex-preferred-size: calc(100% / 4 - 30px);
-        flex-basis: calc(100% / 4 - 30px);
+    -ms-flex-preferred-size: calc(25% - 30px);
+        flex-basis: calc(25% - 30px);
   }
 }
-
 .team__about {
   padding-top: 30px;
   padding-bottom: 30px;
 }
-
 .team__name {
   font-weight: 500;
   font-size: 16px;
@@ -686,7 +636,6 @@ header .container {
   letter-spacing: 0.03em;
   margin-bottom: 10px;
 }
-
 .team__position {
   font-size: 16px;
   line-height: 1.19;
@@ -695,7 +644,6 @@ header .container {
   letter-spacing: 0.03em;
   margin-bottom: 16px;
 }
-
 .team__soc-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -704,11 +652,9 @@ header .container {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 .team__soc-item + .team__soc-item {
   margin-left: 10px;
 }
-
 .team__soc-link {
   width: 44px;
   height: 44px;
@@ -727,7 +673,6 @@ header .container {
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .team__soc-link:hover, .team__soc-link:focus {
   background-color: var(--accent-color);
   fill: var(--third-fonts-color);
@@ -737,13 +682,11 @@ header .container {
   padding-top: 60px;
   padding-bottom: 60px;
 }
-
 @media screen and (min-width: 1200px) {
   .clients {
     padding: 94px 0;
   }
 }
-
 .clients__title {
   font-size: 33px;
   line-height: 1.18;
@@ -752,7 +695,6 @@ header .container {
   text-align: center;
   margin-bottom: 30px;
 }
-
 @media screen and (min-width: 1200px) {
   .clients__title {
     margin-bottom: 50px;
@@ -760,7 +702,6 @@ header .container {
     line-height: 1.16;
   }
 }
-
 .clients__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -770,28 +711,24 @@ header .container {
   margin-right: -30px;
   margin-bottom: -30px;
 }
-
 .clients__item {
   margin-right: 30px;
   margin-bottom: 30px;
-  -ms-flex-preferred-size: calc(100% / 2 - 30px);
-      flex-basis: calc(100% / 2 - 30px);
+  -ms-flex-preferred-size: calc(50% - 30px);
+      flex-basis: calc(50% - 30px);
 }
-
 @media screen and (min-width: 768px) {
   .clients__item {
-    -ms-flex-preferred-size: calc(100% / 3 - 30px);
-        flex-basis: calc(100% / 3 - 30px);
+    -ms-flex-preferred-size: calc(33.3333333333% - 30px);
+        flex-basis: calc(33.3333333333% - 30px);
   }
 }
-
 @media screen and (min-width: 1200px) {
   .clients__item {
-    -ms-flex-preferred-size: calc(100% / 6 - 30px);
-        flex-basis: calc(100% / 6 - 30px);
+    -ms-flex-preferred-size: calc(16.6666666667% - 30px);
+        flex-basis: calc(16.6666666667% - 30px);
   }
 }
-
 .clients__link {
   width: auto;
   height: 92px;
@@ -810,7 +747,6 @@ header .container {
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .clients__link:hover, .clients__link:focus {
   fill: var(--accent-color);
   border: 1px solid var(--accent-color);
@@ -836,11 +772,9 @@ header .container {
   margin-top: 20px;
   width: 231px;
 }
-
 .adress__item:not(:last-child) {
   margin-bottom: 9px;
 }
-
 .adress__map {
   font-family: "Roboto";
   font-style: normal;
@@ -849,7 +783,6 @@ header .container {
   letter-spacing: 0.03em;
   color: var(--third-fonts-color);
 }
-
 .adress__link {
   font-family: "Roboto";
   font-style: normal;
@@ -863,7 +796,6 @@ header .container {
   margin-left: 70px;
   padding-top: 12px;
 }
-
 .container-soc__title {
   font-weight: 700;
   font-size: 14px;
@@ -872,18 +804,15 @@ header .container {
   text-transform: uppercase;
   color: var(--third-fonts-color);
 }
-
 .container-soc__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-top: 20px;
 }
-
 .container-soc__item + .container-soc__item {
   margin-left: 10px;
 }
-
 .container-soc__link {
   width: 44px;
   height: 44px;
@@ -902,7 +831,6 @@ header .container {
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .container-soc__link:hover, .container-soc__link:focus {
   background-color: var(--accent-color);
 }
@@ -911,7 +839,6 @@ header .container {
   margin-left: 93px;
   padding-top: 12px;
 }
-
 .mailing__label {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -919,7 +846,6 @@ header .container {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
-
 .mailing__text {
   width: 100%;
   margin-bottom: 20px;
@@ -929,7 +855,6 @@ header .container {
   text-transform: uppercase;
   color: #FFFFFF;
 }
-
 .mailing__input {
   width: 358px;
   height: 50px;
@@ -945,35 +870,36 @@ header .container {
   margin-right: 12px;
   padding-left: 16px;
 }
-
 .mailing__input::-webkit-input-placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
+.mailing__input::-moz-placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
 .mailing__input:-ms-input-placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
 .mailing__input::-ms-input-placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
 .mailing__input::placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
 .mailing__btn {
   width: 200px;
   height: 50px;
@@ -998,7 +924,6 @@ header .container {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 .mailing__icon {
   fill: #FFFFFF;
   margin-left: 10px;
@@ -1009,24 +934,25 @@ header .container {
 }
 
 .portfolio {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
-
 .portfolio__buttons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 50px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin-right: -9px;
+  margin-bottom: -9px;
 }
-
-.portfolio__item:not(:last-child) {
+.portfolio__item {
   margin-right: 9px;
+  margin-bottom: 9px;
 }
-
 .portfolio__btn {
   font-family: inherit;
   font-weight: 500;
@@ -1040,34 +966,37 @@ header .container {
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .portfolio__btn:hover, .portfolio__btn:focus {
   color: var(--third-fonts-color);
   background-color: var(--accent-color);
 }
 
+.example {
+  margin-top: 40px;
+}
 .example__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-bottom: -30px;
 }
-
 .example__item {
+  max-width: 450px;
   margin-bottom: 30px;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .example__cover-wrap {
   position: relative;
   overflow: hidden;
 }
-
 .example__cover-text {
   position: absolute;
   top: 0;
@@ -1085,39 +1014,29 @@ header .container {
   color: #FFFFFF;
   background: rgba(33, 150, 243, 0.9);
 }
-
 .example__item:hover .example__cover-text {
   -webkit-transform: translateY(0);
           transform: translateY(0);
 }
-
 .example__item:hover, .exampleitem:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   -webkit-transform: translateY(0);
           transform: translateY(0);
 }
-
-.example__item:not(:nth-child(3n)) {
-  margin-right: 30px;
-}
-
 .example__about {
   padding: 20px 0 20px 24px;
   border: solid 1px #EEEEEE;
 }
-
 .example__title {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--second-fonts-color);
 }
-
 .example__text {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
-}
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
