--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -10,9 +10,11 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
-        // justify-content: center;
         margin-right: -9px;
         margin-bottom: -9px;
+        @include tablet{
+            justify-content: center;
+        }
     }
     &__item {
         margin-right: 9px;
@@ -44,18 +46,21 @@
         flex-wrap: wrap;
         justify-content: center;
         margin-bottom: -30px;
+        @include tablet{
+            justify-content: flex-start;
+            margin-right: -30px;
+        }
     }
-
-
-
-
-
-
     &__item {
-        max-width: 450px;
         margin-bottom: 30px;
-        // margin-right: 30px;
         transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        @include tablet{
+            flex-basis: calc(100% / 2 - 30px);
+            margin-right: 30px;
+        }
+        @include desktop{
+            flex-basis: calc(100% / 3 - 30px);
+        }
     }
     &__cover-wrap {
         position: relative;
@@ -65,7 +70,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        transform: translateY(100%);
+        transform: translateY(115%);
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         padding: 63px 24px;
         font-size: 18px;
