--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -22,11 +22,12 @@
     &__list {
         display: flex;
         flex-wrap: wrap;
-        margin-right: -30px;
+        margin-left: -30px;
         margin-bottom: -30px;
+   
     }
     &__item {
-        margin-right: 30px;
+        margin-left: 30px;
         margin-bottom: 30px;
         flex-basis: calc(100% / 2 - 30px);
         @include tablet{
@@ -34,6 +35,7 @@
         }
         @include desktop{
             flex-basis: calc(100% / 6 - 30px);
+            
         }
     }
     &__link {
