--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,25 +1,78 @@
 .hero {
+    width: 100%;
+    margin: 0 auto;
+    padding: 118px 60px;
     background-color: var(--second-bg-color);
-    padding-top: 200px;
-    padding-bottom: 200px;
-    background-image: linear-gradient(to right,
+        background-image: linear-gradient(to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)),
+    url(../../images/hero/hero-mob-1x.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url(../images/hero.jpg);
-       
-    max-width: 1620px;
-    margin: 0 auto;
+        url(../../images/hero/hero-mob-2x.jpg);
+    
+    }
+    @include mobile{
+        max-width: 480px;
+    }
+
+    @include tablet{
+        max-width: 768px;
+        padding: 118px 204px;
+        background-image: linear-gradient(to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)),
+        url(../../images/hero/hero-tab-1x.jpg);
+        @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: linear-gradient(to right,
+            rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)),
+        url(../../images/hero/hero-tab-2x.jpg);
+        }
+    }
+    @include desktop{
+        max-width: 1620px;
+        padding: 200px;
+        background-image: linear-gradient(to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)),
+    url(../../images/hero/hero-des-1x.jpg);
+        @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: linear-gradient(to right,
+            rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)),
+            url(../../images/hero/hero-des-2x.jpg);
+        }
+    }
+
+
+
     &__title {
         color: var(--third-fonts-color);
         font-weight: 900;
-        font-size: 44px;
-        line-height: 1.36;
+        font-size: 26px;
+        line-height: 1.62;
         letter-spacing: 0.06em;
         text-transform: uppercase;
         text-align: center;
         max-width: 650px;
         margin: 0 auto;
         margin-bottom: 30px;
+        @include desktop{
+            justify-content: center;
+            font-size: 44px;
+            line-height: 1.36;
+        }
     }
     &__btn {
         color: var(--third-fonts-color);
