--- a/css/main.css
+++ b/css/main.css
@@ -807,10 +807,33 @@ header .container {
   padding-bottom: 60px;
 }
 
-.footer-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (min-width: 768px) {
+  .footer-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-container {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+}
+
+.logo-footer {
+  display: block;
+  text-align: center;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 1200px) {
+  .logo-footer {
+    text-align: start;
+  }
 }
 
 .footer-logo {
@@ -818,11 +841,29 @@ header .container {
 }
 
 .adress {
-  margin-top: 20px;
-  width: 231px;
+  margin-bottom: -9px;
 }
-.adress__item:not(:last-child) {
+@media screen and (min-width: 1200px) {
+  .adress {
+    margin-right: 70px;
+    min-width: 231px;
+  }
+}
+.adress__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-bottom: 9px;
+}
+@media screen and (min-width: 1200px) {
+  .adress__item {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
 }
 .adress__map {
   font-family: "Roboto";
@@ -842,8 +883,27 @@ header .container {
 }
 
 .container-soc {
-  margin-left: 70px;
-  padding-top: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 60px;
+}
+@media screen and (min-width: 768px) {
+  .container-soc {
+    margin-top: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container-soc {
+    margin-right: 93px;
+  }
 }
 .container-soc__title {
   font-weight: 700;
@@ -885,8 +945,22 @@ header .container {
 }
 
 .mailing {
-  margin-left: 93px;
-  padding-top: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .mailing {
+    margin-top: 0;
+  }
 }
 .mailing__label {
   display: -webkit-box;
@@ -896,6 +970,7 @@ header .container {
       flex-wrap: wrap;
 }
 .mailing__text {
+  text-align: center;
   width: 100%;
   margin-bottom: 20px;
   font-size: 14px;
@@ -904,9 +979,15 @@ header .container {
   text-transform: uppercase;
   color: #FFFFFF;
 }
+@media screen and (min-width: 1200px) {
+  .mailing__text {
+    text-align: start;
+  }
+}
 .mailing__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
+  margin-bottom: 20px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -918,6 +999,11 @@ header .container {
   color: rgba(255, 255, 255, 0.6);
   margin-right: 12px;
   padding-left: 16px;
+}
+@media screen and (min-width: 1200px) {
+  .mailing__input {
+    max-width: 358px;
+  }
 }
 .mailing__input::-webkit-input-placeholder {
   font-size: 16px;
@@ -950,6 +1036,7 @@ header .container {
   color: rgba(255, 255, 255, 0.6);
 }
 .mailing__btn {
+  margin: 0 auto;
   width: 200px;
   height: 50px;
   color: var(--third-fonts-color);
