--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,7 +5,25 @@
 }
 
 .footer-container {
-    display: flex;
+    @include tablet{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    @include desktop{
+        flex-wrap: nowrap;
+        // justify-content: space-around;
+    }
+    
+}
+
+.logo-footer{
+    display: block;
+    text-align: center;
+    margin-bottom: 20px;
+    @include desktop{
+        text-align: start;
+    }
 }
 
 .footer-logo {
@@ -13,10 +31,19 @@
 }
 
 .adress {
-    margin-top: 20px;
-    width: 231px;
-    &__item:not(:last-child) {
+    
+    margin-bottom: -9px;
+    @include desktop{
+        margin-right: 70px;
+        min-width: 231px;
+    }
+    &__item {
+        display: flex;
+        justify-content: center;
         margin-bottom: 9px;
+        @include desktop{
+            justify-content: start;
+        }
     }
     &__map {
         font-family: "Roboto";
@@ -39,8 +66,16 @@
 
 
 .container-soc {
-    margin-left: 70px;
-    padding-top: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 60px;
+    @include tablet{
+        margin-top: 0;
+    }
+    @include desktop{
+        margin-right: 93px;
+    }
     &__title {
         font-weight: 700;
         font-size: 14px;
@@ -75,13 +110,19 @@
 }
 
 .mailing {
-    margin-left: 93px;
-    padding-top: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 60px;
+    @include desktop{
+        margin-top: 0  
+    }
     &__label {
         display: flex;
         flex-wrap: wrap;
     }
     &__text {
+        text-align: center;
         width: 100%;
         margin-bottom: 20px;
         font-size: 14px;
@@ -89,10 +130,14 @@
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: #FFFFFF;
+        @include desktop{
+            text-align:start;
+        }
     }
     &__input {
-        width: 358px;
+        width: 100%;
         height: 50px;
+        margin-bottom: 20px;
         border: 1px solid rgba(255, 255, 255, 0.3);
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
         border-radius: 4px;
@@ -103,6 +148,10 @@
         color: rgba(255, 255, 255, 0.6);
         margin-right: 12px;
         padding-left: 16px;
+        @include desktop{
+            max-width: 358px;
+    
+        }
     }
     &__input::placeholder {
         font-size: 16px;
@@ -111,6 +160,7 @@
         color: rgba(255, 255, 255, 0.6);
     }
     &__btn {
+        margin: 0 auto;
         width: 200px;
         height: 50px;
         color: var(--third-fonts-color);
