--- a/sass/componets/_logo.scss
+++ b/sass/componets/_logo.scss
@@ -1,4 +1,6 @@
 .logo {
+    padding-top: 16px;
+    padding-bottom: 16px;
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 26px;
