--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,12 +1,18 @@
 header .container {
     display: flex;
     align-items: center;
+
 }
 .header-logo {
     color: #000000;
 
 }
 .nav{
+    display: none;
+    @include tablet{
+        display: block;
+    }
+
     &__list {
         display: flex;
         margin-left: 93px;
@@ -33,10 +39,30 @@ header .container {
 
 .contacts-wrap {
     margin-left: auto;
+    display: none;
+    @include tablet{
+        display: block;
+    }
 }
 
 .header-contacts {
-    display: flex;
+    @include desktop{
+        display: flex;
+    }
+    &__item {
+        @include desktop{
+            padding-top: 32px;
+            padding-bottom: 32px;
+        }
+        &:not(:first-child) {
+            margin-top: 10px;
+            @include desktop{
+                margin-left: 30px;
+                margin-top: 0;
+            }
+        }
+    }
+    
     &__link {
         color: var(--first-fonts-color);
         font-weight: 500;
@@ -45,20 +71,11 @@ header .container {
         letter-spacing: 0.02em;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-    &__item:not(:first-child) {
-        margin-left: 30px;
-    }
-    &__item {
-        padding-top: 32px;
-        padding-bottom: 32px;
-    }
     &__link:hover,
     &__link:focus {
         color: var(--accent-color);
     }
 }
-
-
 .icon-envelope {
     margin-right: 10px;
     fill: currentColor;
