--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import './componets/backdrop';
 @import './componets/modal';
 @import './componets/modal-form';
+@import './componets/mob-menu';
 
 // ////////////////////////
 @import './layout/header';
