--- a/sass/componets/_modal-form.scss
+++ b/sass/componets/_modal-form.scss
@@ -68,10 +68,15 @@
         padding-left: 30px;
         height: 24px;
         margin-bottom: 30px;
-        font-size: 14px;
-        line-height: 1.71;
+        font-size: 12px;
+        line-height: 1.67;
         letter-spacing: 0.03em;
         color: #757575;
+        @include desktop{
+            font-size: 14px;
+            line-height: 1.71;
+    
+        }
     }
     &__agreement {
         width: 20px;
