--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,7 @@ body {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 528px;
+  width: 95%;
   height: 581px;
   padding: 40px;
   background-color: rgb(255, 255, 255);
@@ -139,6 +139,27 @@ body {
   transition: -webkit-transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow: scroll;
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    max-width: 450px;
+    max-height: 609px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
+}
+@media (orientation: landscape) {
+  .modal {
+    top: 10px;
+    -webkit-transform: translate(-50%);
+            transform: translate(-50%);
+    overflow: scroll;
+  }
 }
 
 .close-modal {
@@ -274,10 +295,16 @@ body {
   padding-left: 30px;
   height: 24px;
   margin-bottom: 30px;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.67;
   letter-spacing: 0.03em;
   color: #757575;
+}
+@media screen and (min-width: 1200px) {
+  .modal__checkbox {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .modal__agreement {
   width: 20px;
