--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,6 +5,11 @@ header .container {
 }
 .header-logo {
     color: #000000;
+}
+
+.logo-header{
+    padding-top: 16px;
+    padding-bottom: 16px;
 
 }
 .nav{
