--- a/css/main.css
+++ b/css/main.css
@@ -717,6 +717,7 @@ header .container {
   margin-bottom: 30px;
 }
 .features__title {
+  text-align: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -725,6 +726,11 @@ header .container {
   letter-spacing: 0.03em;
   color: #212121;
   margin-bottom: 10px;
+}
+@media screen and (min-width: 768px) {
+  .features__title {
+    text-align: start;
+  }
 }
 .features__text {
   font-weight: 400;
@@ -790,12 +796,19 @@ header .container {
   }
 }
 .team__title {
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--second-fonts-color);
   text-align: center;
   margin-bottom: 50px;
+}
+@media screen and (min-width: 1200px) {
+  .team__title {
+    font-size: 36px;
+    line-height: 1.16;
+    margin-bottom: 50px;
+  }
 }
 .team__list {
   margin-bottom: -30px;
@@ -897,7 +910,7 @@ header .container {
   }
 }
 .clients__title {
-  font-size: 33px;
+  font-size: 28px;
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--second-fonts-color);
