--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,21 +1,25 @@
 .team {
     padding: 60px 0;
+    background-color: #F5F4FA;
+
     @include desktop{
         padding: 94px 0;
     }
-
     
-    background-color: #F5F4FA;
     &__title {
-        font-size: 36px;
-        line-height: 1.16;
+        font-size: 28px;
+        line-height: 1.18;
         letter-spacing: 0.03em;
         color: var(--second-fonts-color);
         text-align: center;
         margin-bottom: 50px;
+        @include desktop {
+            font-size: 36px;
+            line-height: 1.16;
+            margin-bottom: 50px;
+        }
     }
     &__list {
-        // display: flex;
         margin-bottom: -30px;
         @include tablet{
             display: flex;
