--- a/sass/componets/_modal.scss
+++ b/sass/componets/_modal.scss
@@ -3,7 +3,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 95%;
+    width: 95vw;
     height: 581px;
     padding: 40px;
     background-color: rgba(255, 255, 255, 1);
@@ -11,8 +11,8 @@
     transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
     overflow: scroll;
     @include mobile {
-        max-width: 450px;
-        max-height: 609px 
+        width: 450px;
+        height: 609px 
     }
     @include desktop {
         width: 528px;
